# inkbox-audio

./: .gitignore  .gitmodules  CMakeLists.txt  deploy.sh  inkaudio  inkaudio-openrc  inkaudio.sh  vscode-launch.sh
lib/: instructions.txt
lib/prebuild/: instructions.txt
lib/prebuild/libs/: libsndfile.so.1.0.35
src/: functions.cpp  functions.h  main.cpp
src/communication/: usocket.cpp  usocket.h
src/sound/: play.cpp  play.h
tests/: sendUnixSocket.cpp
